@@ -1,12 +1,6 @@
 package com.example.mapper;
 
-import com.example.persistence.binding.UpdateAnimalBindingModel;
-import com.example.persistence.entities.AnimalPhotoEntity;
-import com.example.persistence.entities.AnimalsEntity;
-import com.example.persistence.entities.SizeCategoryEntity;
-import com.example.persistence.enums.SizeCategoryEnum;
-import org.mapstruct.AfterMapping;
-import org.mapstruct.MappingTarget;
+import com.example.persistence.entities.ShelterPhoneEntity;
 import org.mapstruct.Qualifier;
 import org.springframework.stereotype.Component;
 
@@ -14,19 +8,34 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class MapperUtil {
 
     @Qualifier
     @Target(ElementType.METHOD)
-    @Retention(RetentionPolicy.CLASS)
-    public @interface MapPhotoList {
+    @Retention(RetentionPolicy.SOURCE)
+    public @interface MapPhoneList {
     }
 
-    @MapPhotoList
-    public List<String> mapPhotost(List<AnimalPhotoEntity> animalPhotoEntityList) {
-        return animalPhotoEntityList.stream().map(AnimalPhotoEntity::getAnimalPhotoURL).toList();
+    @MapPhoneList
+    public List<String> mapPhonesToStringg(List<ShelterPhoneEntity> phones) {
+   return phones.stream().map(ShelterPhoneEntity::getShelterPhones)
+           .collect(Collectors.toList());
+    }
+
+    @Qualifier
+    @Target(ElementType.METHOD)
+    @Retention(RetentionPolicy.SOURCE)
+    public @interface MapPhoneEntity {
+    }
+
+    @MapPhoneEntity
+    public List<ShelterPhoneEntity> mapToShelterPhoneEntitiess(List<String> phones) {
+        return phones.stream().map(ShelterPhoneEntity::new)
+                .collect(Collectors.toList());
     }
 }
